--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,3 @@
 /* Disable prev/next chapter navigation bars */
-.nav-wide-wrapper { display: none; }
-
+div#content > .nav-wrapper { display: none !important; }
+div#page-wrapper > .nav-wide-wrapper { display: none !important; }
